bugfix: encounter front health tracker spacing

--- a/app/themes/Color/cards.scss
+++ b/app/themes/Color/cards.scss
@@ -84,7 +84,7 @@ $footer-height: 0.4in;
     margin: 0;
     padding: 0;
     position: absolute;
-    top: 0.2in;
+    top: 0.27in;
     right: $border;
     z-index: 99;
     font-size: $text-size-content;
